--- a/app/assets/stylesheets/modal.scss
+++ b/app/assets/stylesheets/modal.scss
@@ -416,5 +416,8 @@ $orange_main: #ff5722;
   padding-left: 5px;
 }
 .packing_view {
-  margin-top: -50px;
+  margin-top: -12px;
+}
+.padding-top-15px {
+  padding-top: 15px;
 }
