--- a/app/views/dashboard/orders/index.html.erb
+++ b/app/views/dashboard/orders/index.html.erb
@@ -1,6 +1,6 @@
 <div class="packing_view">
   <h2 class="text-center"><%= t "dashboard.order.title" %></h2>
-  <div class="row">
+  <div class="row padding-top-15px">
     <div class="col-md-8 border_order_list col-md-8-resize">
       <div class="title modal-header header_title_order">
         <span class="order_header_text">
